# gpu-compute-driver-bench

./: .clang-format  .gitignore  CMakeLists.txt  NOTICE  README.md  TestSuitConfig.json  install.sh
common/: CMakeLists.txt
common/include/: BasicInfo.h  Benchmark.h  Callbacks.h  Celero.h  CommandLine.h  Console.h  Exceptions.h  Executor.h  Experiment.h  ExperimentResult.h  Factory.h  FileReader.h  GenericFactory.h  Memory.h  Pimpl.h  Pimplimpl.h  Print.h  ResultTable.h  ShareMemroyDefine.h  Statistics.h  TestFixture.h  TestVector.h  ThreadTestFixture.h  Timer.h  UserDefinedMeasurement.h  UserDefinedMeasurementCollector.h  UserDefinedMeasurementTemplate.h  UserDefinedMeasurements.h  Utilities.h  helper_musa.h  helper_musa_drvapi.h  timer_his.h
common/src/: BasicInfo.cpp  Benchmark.cpp  Callbacks.cpp  Celero.cpp  (+15 more)
memory/: Copy1DAlignedRate.cpp  Copy1DUnAlignedRate.cpp  Copy2DRate.cpp  Copy3DArrayRate.cpp  Copy3DRate.cpp  CopyHostRate.cpp  CopyPinnedRate.cpp  CopyRegisteredRate.cpp  CpuReadAndWriteRate.cpp  GpuReadAndWriteRate.cu  HostRegisterAndUnRegister.cpp  IpcOpenMemHandle.cpp  IpcOpenMemHandleChild.cpp  MallocRateFrom1Bto4GB.cpp  ReuseRate.cpp  SetRate.cpp
multicards/: CMakeLists.txt  CopyP2PRate.cpp  CopySetiPj2PkRate.cpp  CrossDeviceSetRate.cpp  kernelLaunchMulCards.cpp
resource/: CMakeLists.txt  eventManage.cpp  streamManage.cpp
schedule/: CMakeLists.txt  efficiencyOfDependency.cpp  efficiencyOfGraph.cu  efficiencyOfGraphLaunch.cu  efficiencyOfSync.cu  graphLaunchThroughputMode.cu  kernelGap.cu  kernelLaunchLatencyMode.cpp  kernelLaunchMulStreamTimerByCpu.cpp  kernelLaunchMulStreamTimerByEvent.cpp  kernelLaunchThroughputMode.cpp  kernelLaunchWithDependency.cu  kernelLaunchWithLlcPersistent.cu  kernelPostprocessBubbleOfHW.cu  moduleLoadAndGetFunction.cpp  parallelismOfDifferentCommands.cu  streamConcurrencyCompute.cpp  streamConcurrencyMemcpy.cpp
schedule/elf/: EmptyKernel.cu  EmptyKernel.elf  EmptyKernel.ptx  VectorAdd.cu  VectorAdd.elf  VectorAdd.ptx  basic_funcs.cu  basic_funcs.elf  basic_funcs.ptx  basic_funcs_template.cu  basic_funcs_template.elf  basic_funcs_template.ptx  cdm_parallelism.cu  cdm_parallelism.elf  cdm_parallelism.ptx  gen.sh
scripts/: autorun.py  calculateScoreOfSuit.py  csv2pngs.py  porting2cuda.sh  porting2musa.sh  visualize_results_demo.py
(+98 files in other folders)
